nvidia/cuda-vector-add-raw.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-vector-add-raw
spec:
  restartPolicy: OnFailure
  containers:
    - name: cuda-vector-add
      image: "docker.io/mirrorgooglecontainers/cuda-vector-add:v0.1"
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop: ["ALL"]
