nvidia/cuda-vector-add.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-vector-add
spec:
  restartPolicy: OnFailure
  containers:
    - name: cuda-vector-add
      image: "docker.io/mirrorgooglecontainers/cuda-vector-add:v0.1"
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop: ["ALL"]

      resources:
        limits:
          nvidia.com/gpu: 1 # requesting 1 GPU
