nvidia/samples.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-samples
  namespace: nvidia 
spec:
  restartPolicy: OnFailure
  containers:
    - name: cuda-samples
      image: "quay.io/zvonkok/cuda:10.1-samples-ubi8"
      command: ["/usr/local/cuda/samples/bin/x86_64/linux/release/vectorAdd"]
